# tauri-vite-vue

./: .eslintignore  .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1729435364540-60b3ebb0b0a7a.mjs
.github/workflows/: ci.yml  release.yml
locales/: en.yml  zh-CN.yml
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  shims.d.ts  typed-router.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/menu/: index.ts
src/components/: BaseFooter.vue  GreetFromRust.vue  HelloWorld.vue  NavMenu.vue
src/layouts/: default.vue
src/modules/: i18n.ts  pinia.ts
src/pages/: about.md  index.vue
src/stores/: app.ts
src/styles/: css-vars.scss  index.scss  main.css
src/tauri/: cli.ts  dialog.ts  index.ts  init.ts  menu.ts  updater.ts
src/tauri/fs/: index.ts
src/types/: index.ts
